# taxonguard

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  lion.csv  pyproject.toml
.github/: .gitkeep
.github/workflows/: ci.yml
apps/: .gitkeep
apps/web/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/e2e/: clean.spec.ts  home.spec.ts  mobile.spec.ts  review.spec.ts
apps/web/public/: .gitkeep
apps/web/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx  providers.tsx
apps/web/src/app/about/: page.test.tsx  page.tsx
apps/web/src/app/clean/: page.test.tsx  page.tsx
apps/web/src/app/explore/: page.test.tsx  page.tsx
apps/web/src/app/review/: page.test.tsx  page.tsx
apps/web/src/components/: Logo.tsx  SiteFooter.tsx  SiteHeader.tsx
apps/web/src/components/explore/: RecordsExplorer.test.tsx  RecordsExplorer.tsx  RecordsMap.test.tsx  RecordsMap.tsx  WriteBackResult.tsx
apps/web/src/components/review/: AddSpeciesForm.test.tsx  AddSpeciesForm.tsx  ClusterActions.tsx  ClusterListItem.tsx  ClusterMap.test.tsx  ClusterMap.tsx
apps/web/src/components/tour/: WelcomeTour.test.tsx  WelcomeTour.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  HelpTip.test.tsx  HelpTip.tsx  States.tsx  SuspicionMeter.tsx  components.test.tsx
apps/web/src/lib/: api.ts  geo.test.ts  geo.ts  queries.ts  reasons.ts  tour.ts
design/: gbif_dark_atlas.md
docs/: architecture.md  compliance.md  data-schema.md  data-sources.md  evaluation.md  operating-instructions.md
infra/: .gitkeep  api.Dockerfile  docker-compose.yml  web.Dockerfile
notebooks/: README.md  taxonguard_demo.ipynb
services/api/: README.md  pyproject.toml
services/api/src/taxonguard_api/: __init__.py  annotate_service.py  clean_service.py  config.py  main.py  models.py  review_taxa.py  routes.py  score_service.py  service.py
services/api/tests/: test_annotate_api.py  test_clean_api.py  test_clusters.py  test_main.py  test_review_taxa_api.py  test_score_api.py
