[project]
name = "taxonguard"
version = "0.1.0"
description = "Detect, explain, expert-confirm, and write back implausible GBIF occurrence records."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "taxonguard-core",
    "taxonguard-api",
]

[tool.uv.workspace]
members = ["packages/core", "services/api"]

[tool.uv.sources]
taxonguard-core = { workspace = true }
taxonguard-api = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pre-commit>=4.0",
    "httpx>=0.27",
    "pandas-stubs>=2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/core/src", "services/api/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["packages/core/src", "services/api/src"]

[[tool.mypy.overrides]]
module = ["rasterio.*", "shapely.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["packages/core/tests", "services/api/tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:",
]
