[project]
name = "taxonguard"
version = "0.1.0"
description = "Detect, explain, expert-confirm, and write back implausible GBIF occurrence records."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "taxonguard-core",
    "taxonguard-api",
]

[tool.uv.workspace]
members = ["packages/core", "services/api"]

[tool.uv.sources]
taxonguard-core = { workspace = true }
taxonguard-api = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pre-commit>=4.0",
    "httpx>=0.27",
    "pandas-stubs>=2.2",
    "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/core/src", "services/api/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
# Declare the workspace packages explicitly so import sorting is identical in
# every environment. Without this, ruff auto-detects first-party packages, and
# that detection differs between a local checkout and CI (where the packages are
# installed editable), which can flag I001 in CI on imports that pass locally.
known-first-party = ["taxonguard_core", "taxonguard_api"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["packages/core/src", "services/api/src"]
# Resolve first-party imports to the source under these roots, so type checking
# uses the checked source instead of an installed copy of the package. Without
# this, in environments where the workspace packages are installed (CI), mypy can
# resolve `taxonguard_core.*` to the installed distribution and miss modules.
mypy_path = ["packages/core/src", "services/api/src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["rasterio.*", "shapely.*", "sklearn.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["packages/core/tests", "services/api/tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:",
]
