[project]
name = "taxonguard-api"
version = "0.1.0"
description = "FastAPI service wrapping the TaxonGuard detection engine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "taxonguard-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taxonguard_api"]

[tool.uv.sources]
taxonguard-core = { workspace = true }
